# EvaluationClaw

./: technical_proposal_v3.md  working_notes_0524.md
evalclaw/: README.md  pyproject.toml
evalclaw/src/evalclaw/: __init__.py  config.py
evalclaw/src/evalclaw/skills/: __init__.py
evalclaw/src/evalclaw/skills/evalclaw/: SKILL.md
evalclaw/src/evalclaw/skills/evalclaw-generate/: SKILL.md
evalclaw/src/evalclaw/skills/evalclaw-plan/: SKILL.md
evalclaw/src/evalclaw/skills/evalclaw-qc/: SKILL.md
evalclaw/src/evalclaw/skills/evalclaw-report/: SKILL.md
evalclaw/src/evalclaw/skills/evalclaw-run/: SKILL.md
evalclaw/src/evalclaw/tools/: __init__.py  compile.py  hf.py
evalclaw/tests/: test_compile.py  test_e2e_offline.py  test_hf.py  test_skills_parse.py
nanobot/agent/: skills.py
nanobot/channels/: matrix.py
tests/agent/: test_skills_loader.py  test_skills_loader_plugins.py
tests/channels/: test_matrix_channel.py
webui/src/tests/: markdown-text-renderer.test.tsx
